# blackbox

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  dev.sh  pyproject.toml
docs/: api.md  architecture.md  cli.md  configuration.md  pipeline.md
src/: __init__.py  config.py  main.py  models.py
src/classify/: __init__.py  prompts.py  runner.py
src/cli/: __init__.py  app.py  client.py  config.py  discovery.py
src/cli/screens/: __init__.py  api_config.py  browser.py  progress.py  results.py  splash.py
src/cli/widgets/: __init__.py  severity_bar.py  source_badge.py
src/llm/: client.py
src/normalizer/: __init__.py  claude_code_transform.py  codex_cli_transform.py  cursor_transform.py  cursor_v1.py  cursor_v2.py  cursor_vscdb_transform.py  gemini_cli_transform.py  pi_transform.py  unified.py  vscdb_reader.py
src/pipeline/: __init__.py  annotator.py  context_builder.py  dedup.py  enrichment.py  orchestrator.py
src/rca/: __init__.py  prompts.py
src/storage/: __init__.py  disk_store.py  run_store.py
src/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py  test_annotator.py  test_api.py  test_classify.py  test_context.py  test_normalizer.py  test_pipeline.py  test_rca_prompts.py  test_run_store.py
tests/test_cli/: __init__.py  test_app.py  test_client.py  test_discovery.py  test_integration.py  test_screens.py
