[project]
name = "standalone-trace-analyzer-prod"
version = "0.1.0"
description = "Self-contained FastAPI server for AI coding trace analysis"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.34.0",
    "pydantic==2.13.0",
    "pydantic-settings==2.6.1",
    "httpx==0.27.2",
    "openai==2.32.0",
    "textual>=2.0",
]

[project.scripts]
quickcall = "src.cli.app:main"

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "anyio==4.13.0",
    "pytest-asyncio==1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
